# BW-sre-agent

./: .gitignore  ACTION_PLAN.md  AGENTS.md  CLAUDE.md  E2E_TESTING.md  PHASE8_DESIGN_DECISIONS.md  bug汇总.md  playwright.config.ts  start-dev.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.lock.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_extend_runs_add_events.py  003_add_tool_audits.py  004_extend_actions.py  005_extend_rca_add_writebacks.py  006_approval_fields.py  007_reliability_closure.py
backend/app/: __init__.py  llm_client.py  main.py  tracing.py  tracing_providers.py
backend/app/api/: __init__.py  approvals.py  incidents.py  settings.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py
backend/app/evals/: case_loader.py  executors.py  fixture_context.py  metrics.py  replay_runner.py  report.py  runner.py  scorer.py
backend/app/graph/: __init__.py  builder.py  context.py  evidence_utils.py  serde.py  state.py
backend/app/i18n/: __init__.py
backend/app/models/: __init__.py  action.py  approval.py  db_models.py  event.py  evidence.py  incident.py  incident_type.py  planning.py  rca.py  remediation.py  root_cause.py  triage.py
backend/app/normalizers/: __init__.py  env.py  service_alias.py  time_range.py
backend/app/policies/: __init__.py  env.py  risk.py
backend/app/rag/: __init__.py  embeddings.py  indexer.py  keyword_index.py  prompt.py  reranker.py  retriever.py  schemas.py  settings.py  store.py  writer.py
backend/app/repositories/: __init__.py  actions_repo.py  approvals_repo.py  checkpoints_repo.py  events_repo.py  evidence_repo.py  rca_repo.py  runs_repo.py
backend/app/services/: approval_runtime.py  checkpoint.py  event_bus.py  executor.py  graph_runner.py  intake.py  knowledge_writeback.py  runtime.py
backend/app/tests/: conftest.py  test_aggregator.py  test_approvals_repo.py  test_diagnose_structured.py  test_eval_case_loader.py  test_eval_dataset_integrity.py  test_eval_executors.py  test_eval_fixture_context.py  test_eval_metrics.py  test_eval_replay_cli.py  test_eval_report.py  test_eval_runner.py  test_eval_scorer.py  test_event_bus.py  test_models.py  (+26 more)
(+988 files in other folders)
