[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot-backend"
version = "0.1.0"
description = "OpsPilot Backend - SRE Incident Management System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpsPilot Team", email = "team@opspilot.io"}
]
keywords = ["sre", "incident-management", "devops", "aiops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    
    # Database
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0",
    "alembic==1.13.1",
    
    # LangGraph & LangChain
    "langgraph==0.0.55",
    "langchain==0.1.4",
    "langchain-core==0.1.16",
    "langchain-openai==0.0.5",
    
    # HTTP & Networking
    "httpx==0.26.0",
    "sse-starlette==1.8.2",
    
    # Retry & Resilience
    "tenacity==8.2.3",
    
    # Logging
    "structlog==24.1.0",
    "loguru==0.7.2",
    
    # Utilities
    "python-multipart==0.0.6",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-mock==3.12.0",
    
    # Development
    "python-devtools==0.3.1",
]

[project.urls]
Homepage = "https://github.com/opspilot/opspilot-backend"
Repository = "https://github.com/opspilot/opspilot-backend"
Documentation = "https://opspilot.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
